# google-style-precommit-hook

./: .editorconfig  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
google_style_format/: __init__.py
